Se agrega referencia a la carpeta models en el folder include

--- a/PrimatesWallet.Core/PrimatesWallet.Core.csproj
+++ b/PrimatesWallet.Core/PrimatesWallet.Core.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<Folder Include="Interfaces\" />
 		<Folder Include="Enums\" />
+		<Folder Include="Models\" />
 	</ItemGroup>
 
 </Project>
