--- a/PrimatesWallet.Core/PrimatesWallet.Core.csproj
+++ b/PrimatesWallet.Core/PrimatesWallet.Core.csproj
@@ -9,8 +9,11 @@
 	<ItemGroup>
 		<Folder Include="Interfaces\" />
 		<Folder Include="Enums\" />
-    <Folder Include="Models\" />
 
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.0" />
 	</ItemGroup>
 
 </Project>
