--- a/PrimatesWallet.Application/PrimatesWallet.Application.csproj
+++ b/PrimatesWallet.Application/PrimatesWallet.Application.csproj
@@ -7,10 +7,17 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Folder Include="Interfaces\" />
 		<Folder Include="DTOS\" />
 		<Folder Include="Mapping\" />
-		<Folder Include="Services\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\PrimatesWallet.Core\PrimatesWallet.Core.csproj" />
 	</ItemGroup>
 
 </Project>
