--- a/PrimatesWallet.Application/PrimatesWallet.Application.csproj
+++ b/PrimatesWallet.Application/PrimatesWallet.Application.csproj
@@ -7,11 +7,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Folder Include="DTOS\" />
 		<Folder Include="Mapping\" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="AutoMapper" Version="12.0.1" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 	</ItemGroup>
