--- a/PrimatesWallet.Api/appsettings.json
+++ b/PrimatesWallet.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=PrimatesWalletDB; Trusted_Connection=True; Integrated Security=True"
+    "DefaultConnection": "Data Source=DESKTOP-FU1UNF6\\SQLEXPRESS; Initial Catalog=PrimatesWalletDB; Trusted_Connection=True; Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
