--- a/PrimatesWallet.Application/PrimatesWallet.Application.csproj
+++ b/PrimatesWallet.Application/PrimatesWallet.Application.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="AutoMapper" Version="12.0.1" />
+	  <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
