--- a/PrimatesWallet.Application/PrimatesWallet.Application.csproj
+++ b/PrimatesWallet.Application/PrimatesWallet.Application.csproj
@@ -9,6 +9,9 @@
 	<ItemGroup>
 	  <PackageReference Include="AutoMapper" Version="12.0.1" />
 	  <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+	  <PackageReference Include="Hangfire.AspNetCore" Version="1.7.34" />
+	  <PackageReference Include="Hangfire.Core" Version="1.7.34" />
+	  <PackageReference Include="Hangfire.SqlServer" Version="1.7.34" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
