--- a/Front.Next/package.json
+++ b/Front.Next/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.15",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "eslint": "8.37.0",
