--- a/Front.Next/package.json
+++ b/Front.Next/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sweetalert2": "^11.7.3",
     "swr": "^2.1.2",
     "yup": "^1.0.2"
   }
