--- a/Back.NET/PrimatesWallet.Api/appsettings.json
+++ b/Back.NET/PrimatesWallet.Api/appsettings.json
@@ -10,6 +10,7 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key":  "lionelmessipassword"
-  }
+    "Key": "lionelmessipassword"
+  },
+  "ssl": 0
 }
