--- a/Front.Next/package.json
+++ b/Front.Next/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
     "next": "13.2.4",
+    "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
