--- a/Back.NET/PrimatesWallet.Api/appsettings.Development.json
+++ b/Back.NET/PrimatesWallet.Api/appsettings.Development.json
@@ -1,13 +1,22 @@
-{
-  "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http1"
-    }
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+
+  {
+    "Kestrel": {
+      "EndpointDefaults": {
+        "Protocols": "Http1"
+      },
+      "EndPoints": {
+        "Https": {
+          "Url": "https://localhost:7149",
+          "Kestrel": {
+            "Certificates": null
+          }
+        }
+      }
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
     }
   }
-}
