--- a/Front.Next/package.json
+++ b/Front.Next/package.json
@@ -17,10 +17,12 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sweetalert2": "^11.7.3",
     "swr": "^2.1.2",
     "yup": "^1.0.2"
   }
