--- a/Back.NET/PrimatesWallet.Application/PrimatesWallet.Application.csproj
+++ b/Back.NET/PrimatesWallet.Application/PrimatesWallet.Application.csproj
@@ -16,6 +16,7 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
