--- a/Back.NET/PrimatesWallet.Core/PrimatesWallet.Core.csproj
+++ b/Back.NET/PrimatesWallet.Core/PrimatesWallet.Core.csproj
@@ -13,6 +13,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.0" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 </Project>
