pequeños fix generales

--- a/Front.Next/.env
+++ b/Front.Next/.env
@@ -1,4 +1,6 @@
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://127.0.0.1:3000
+NEXT_PUBLIC_URL=fhttp://localhost:3000
+NEXT_PUBLIC_BACKEND=http://localhost:7149/api
 NEXTAUTH_SECRET=xbvR&s%MGnY9o8%LFIe73@JX2EHdu%RE
 JWT_SECRET=lionelmessipassword
 NODE_TLS_REJECT_UNAUTHORIZED=0
